[project]
name = "git-remote-rns"
version = "0.0.1"
description = "Git remote helper for syncing repositories over Reticulum"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Eeems"}]
dependencies = ["rns>=1.1.4", "lxmf>=0.9.4"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "prospector[with_everything]", 'basedpyright']

[project.scripts]
git-remote-rns = "rngit.__main__:client"
rngit = "rngit.__main__:server"

[build-system]
requires = ["setuptools>=70.1", "nuitka>=4.0.6"]
build-backend = "nuitka.distutils.Build"

[tool.setuptools]
packages = ["rngit"]

[tool.ruff]
exclude = [".venv", "typings", "build"]

[tool.pyright]
exclude = [".venv/**", "typings/**", "build/**"]
reportMissingTypeStubs = false

[tool.pylint."messages control"]
disable = [
	"line-too-long",
	"invalid-name",
	"global-statement",
	"broad-exception-caught",
	"too-many-statements",
	"too-many-return-statements",
	"too-many-branches",
	"too-many-locals"
]

[tool.bandit]
exclude_dirs = [".venv", "typings", "build"]
