[project]
name = "git-remote-rns"
version = "0.0.6"
description = "Git remote helper for syncing repositories over Reticulum"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Eeems"}]
dependencies = ["rns>=1.1.4", "lxmf>=0.9.4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
]
dynamic = ["readme"]

[project.urls]
Homepage = "https://github.com/Eeems/git-remote-rns"
Repository = "https://github.com/Eeems/git-remote-rns.git"
Issues = "https://github.com/Eeems/git-remote-rns/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "prospector[with_everything]", 'basedpyright']

[project.scripts]
git-remote-rns = "rngit.__main__:client"
rngit = "rngit.__main__:server"

[build-system]
requires = ["setuptools>=70.1", "nuitka>=4.0.6"]
build-backend = "nuitka.distutils.Build"

[tool.setuptools.dynamic]
readme = {file= ["README.md"], content-type = "text/markdown"}

[tool.setuptools]
packages = ["rngit"]

[tool.ruff]
exclude = [".venv", "typings", "build"]

[tool.pyright]
exclude = [".venv/**", "typings/**", "build/**"]
reportMissingTypeStubs = false

[tool.pylint."messages control"]
disable = [
	"line-too-long",
	"invalid-name",
	"global-statement",
	"broad-exception-caught",
	"too-many-statements",
	"too-many-return-statements",
	"too-many-branches",
	"too-many-locals"
]

[tool.bandit]
exclude_dirs = [".venv", "typings", "build"]
